image componant is done

--- a/index.html
+++ b/index.html
@@ -33,26 +33,285 @@
                 </ul>
             </div>
             <div class="Mode">
-                <i class="fa-solid fa-moon"></i>
+                <i class="fa-regular fa-moon"></i>
             </div>
         </nav>
     </header>
+
     <section class="Home" id="Home">
         <div class="cont">
-            
+            <div class="image">
+                <img src="image/home-lamp.png" alt="">
+                <h1>LIGHT</h1>
+            </div>
+            <div class="content">
+                <h3 class="title-h3">The best light bulbs</h3>
+                <h1>Unique Light For You Home</h1>
+                <div class="buttons">
+                    <button>Discover Now</button>
+                    <button><i class="fa-regular fa-circle-play"></i>Watch Video</button>
+                </div>
+                <ul>
+                    <li>
+                        <h3>9K<span>+</span></h3>
+                        <p>Premium<br>Product</p>
+                    </li>
+                    <li>
+                        <h3>2K<span>+</span></h3>
+                        <p>Happy<br>Customer</p>
+                    </li>
+                    <li>
+                        <h3>28<span>+</span></h3>
+                        <p>Awards winning</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
-    <section class="Popular" id="Popular">
 
+    <!-- <section class="Popular" id="Popular">
+        <div class="title">
+            <h2>Popular Product</h2>
+            <p>Find our best products faster and get the quality lights we have for you.</p>
+        </div>
+        <div class="con">
+                <div class="product">
+                    <div class="product-list">
+                        <div>
+                            <div>
+                                <img src="image/modern-lamp.png" alt="">
+                            </div>
+                            <h3>Modern Light</h3>
+                            <p>Hanging Light</p>
+                            <div class="prace">
+                                <h3><span>$</span>14</h3>
+                                <button><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="image/industrial-lamp.png" alt="">
+                            </div>
+                            <h3>Industrial Light</h3>
+                            <p>Hanging Light</p>
+                            <div class="prace">
+                                <h3><span>$</span>20</h3>
+                                <button><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="image/superbolw-lamp.png" alt="">
+                            </div>
+                            <h3>superbolw Light</h3>
+                            <p>Hanging Light</p>
+                            <div class="prace">
+                                <h3><span>$</span>18</h3>
+                                <button><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="image/ultrawide-lamp.png" alt="">
+                            </div>
+                            <h3>ultrawide Light</h3>
+                            <p>Hanging Light</p>
+                            <div class="prace">
+                                <h3><span>$</span>16</h3>
+                                <button><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="image/roundness-light.png" alt="">
+                            </div>
+                            <h3>roundness Light</h3>
+                            <p>Hanging Light</p>
+                            <div class="prace">
+                                <h3><span>$</span>17</h3>
+                                <button><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="switch">
+                        <button class="to-left"></button>
+                        <button class="to-right"></button>
+                    </div>
+                </div>
+        </div>
     </section>
+
     <section class="Choose" id="Choose">
-
+        <div class="product-1 product">
+            <div>
+                <div class="img">
+                    <img src="image/choose-lamp.png" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <h3>Why Choose Us</h3>
+                <p>Our products have won numerous awards and we can guarantee the unlimited quality of our products.</p>
+                <ul>
+                    <li><span><i class="fa-solid fa-plus"></i></span>Frequently New Design</li>
+                    <li><span><i class="fa-solid fa-plus"></i></span>Original Production</li>
+                    <li><span><i class="fa-solid fa-plus"></i></span>Production With Large Stock</li>
+                    <li><span><i class="fa-solid fa-plus"></i></span>Professional Quality Control</li>
+                </ul>
+            </div>
+        </div>
+        <div class="product-2 product">
+            <div>
+                <div class="img">
+                    <img src="image/features-lamp.png" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <h3>Latest Features</h3>
+                <p>We always provide the latest and best features for your customer, don't worry, we provide the latest technology for you.</p>
+                <ul>
+                    <li>Voltage<br>Settings</li>
+                    <li>Application<br>Control</li>
+                    <li>Voice<br>Control</li>
+                    <li>Schedule<br>Settings</li>
+                </ul>
+            </div>
+        </div>
     </section>
+
     <section class="Products" id="Products">
-
+        <div class="cont">
+            <h2>our product</h2>
+            <p>Discover all our Unique products that are <br> suitable for your home.</p>
+            <div class="content">
+                <div>
+                    <div class="img">
+                        <img src="image/modern-lamp.png" alt="">
+                    </div>
+                    <h3 class="name">modern light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/industrial-lamp.png" alt="">
+                    </div>
+                    <h3 class="name">Industrial light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/superbolw-lamp.png" alt="">
+                    </div>
+                    <h3 class="name">superbolw light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/ultrawide-lamp.png" alt="">
+                    </div>
+                    <h3 class="name">ultrawide light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/roundness-light.png" alt="">
+                    </div>
+                    <h3 class="name">roundness light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/stickness-light.png" alt="">
+                    </div>
+                    <h3 class="name">stickness light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/superjet-light.png" alt="">
+                    </div>
+                    <h3 class="name">superjet light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+                <div>
+                    <div class="img">
+                        <img src="image/nakedness-lamp.png" alt="">
+                    </div>
+                    <h3 class="name">nakedness light</h3>
+                    <p>hanging light</p>
+                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer>
 
-    </footer>
+    <div class="joinUs">
+        <div>
+            <div class="img">
+                <img src="image/join-lamp.png" alt="">
+            </div>
+        </div>
+        <div class="contact">
+            <h3></h3>
+            <p></p>
+            <div class="form">
+                <input type="text">
+                <button>Join Now</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-contact">
+            <div>
+                <h3 class="logo"></h3>
+                <p>We have a vision to make lighting evenly distributed to all parts of the earth.</p>
+            </div>
+            <div>
+                <h3>about</h3>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">features</a></li>
+                    <li><a href="#">news & blog</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3></h3>
+                <ul>
+                    <li><a href="#">what sunlight</a></li>
+                    <li><a href="#">support us</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3></h3>
+                <ul>
+                    <li><a href="#">why sunlight</a></li>
+                    <li><a href="#">capital</a></li>
+                    <li><a href="#">security</a></li>
+                </ul>
+            </div>
+            <div class="Follow-icons">
+                <h3>follow us</h3>
+                <div class="icons">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+        <div class="footer-My">
+                <p>© Copyright Hema. All rights reserved</p>
+            <div class="terms-and-policy">
+                <p>Terms & Agreements</p>
+                <p>Privacy Policy</p>
+            </div>
+        </div>
+    </footer> -->
 </body>
 </html>
