Home section is done

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                 <h1>LIGHT</h1>
             </div>
             <div class="content">
-                <h3 class="title-h3">The best light bulbs</h3>
-                <h1>Unique Light For You Home</h1>
-                <div class="buttons">
-                    <button>Discover Now</button>
-                    <button><i class="fa-regular fa-circle-play"></i>Watch Video</button>
+                <div>
+                    <h3 class="title-h3">The best light bulbs</h3>
+                    <h1>Unique Light For You Home</h1>
+                    <div class="buttons">
+                        <button class="button">Discover Now</button>
+                        <button class="button-watch"><i class="fa-regular fa-circle-play"></i>Watch Video</button>
+                    </div>
                 </div>
                 <ul>
                     <li>
@@ -62,7 +64,7 @@
                     </li>
                     <li>
                         <h3>28<span>+</span></h3>
-                        <p>Awards winning</p>
+                        <p>Awards<br>winning</p>
                     </li>
                 </ul>
             </div>
