start in Popular section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </section>
 
-    <!-- <section class="Popular" id="Popular">
+    <section class="Popular" id="Popular">
         <div class="title">
             <h2>Popular Product</h2>
             <p>Find our best products faster and get the quality lights we have for you.</p>
@@ -143,7 +143,7 @@
         </div>
     </section>
 
-    <section class="Choose" id="Choose">
+    <!-- <section class="Choose" id="Choose">
         <div class="product-1 product">
             <div>
                 <div class="img">
@@ -178,9 +178,9 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="Products" id="Products">
+    <!-- <section class="Products" id="Products">
         <div class="cont">
             <h2>our product</h2>
             <p>Discover all our Unique products that are <br> suitable for your home.</p>
@@ -251,9 +251,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <div class="joinUs">
+    <!-- <div class="joinUs">
         <div>
             <div class="img">
                 <img src="image/join-lamp.png" alt="">
@@ -267,9 +267,9 @@
                 <button>Join Now</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <footer>
+    <!-- <footer>
         <div class="footer-contact">
             <div>
                 <h3 class="logo"></h3>
@@ -314,6 +314,6 @@
                 <p>Privacy Policy</p>
             </div>
         </div>
-    </footer> -->
+    </footer>  -->
 </body>
 </html>
