end of Popular section and work in Choose section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="image">
                 <img src="image/home-lamp.png" alt="">
                 <h1>LIGHT</h1>
+                <div class="box-shadow"></div>
             </div>
             <div class="content">
                 <div>
@@ -72,15 +73,16 @@
     </section>
 
     <section class="Popular" id="Popular">
-        <div class="title">
-            <h2>Popular Product</h2>
-            <p>Find our best products faster and get the quality lights we have for you.</p>
-        </div>
-        <div class="con">
+        <div class="cont">
+            <div class="title">
+                <h2>Popular Product</h2>
+                <p>Find our best products faster and get the quality lights we have for you.</p>
+            </div>
+            <div class="content">
                 <div class="product">
                     <div class="product-list">
-                        <div>
-                            <div>
+                        <div class="item">
+                            <div class="image">
                                 <img src="image/modern-lamp.png" alt="">
                             </div>
                             <h3>Modern Light</h3>
@@ -90,8 +92,8 @@
                                 <button><i class="fa-solid fa-plus"></i></button>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="item">
+                            <div class="image">
                                 <img src="image/industrial-lamp.png" alt="">
                             </div>
                             <h3>Industrial Light</h3>
@@ -101,8 +103,8 @@
                                 <button><i class="fa-solid fa-plus"></i></button>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="item">
+                            <div class="image">
                                 <img src="image/superbolw-lamp.png" alt="">
                             </div>
                             <h3>superbolw Light</h3>
@@ -112,8 +114,8 @@
                                 <button><i class="fa-solid fa-plus"></i></button>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="item">
+                            <div class="image">
                                 <img src="image/ultrawide-lamp.png" alt="">
                             </div>
                             <h3>ultrawide Light</h3>
@@ -123,8 +125,8 @@
                                 <button><i class="fa-solid fa-plus"></i></button>
                             </div>
                         </div>
-                        <div>
-                            <div>
+                        <div class="item">
+                            <div class="image">
                                 <img src="image/roundness-light.png" alt="">
                             </div>
                             <h3>roundness Light</h3>
@@ -136,49 +138,62 @@
                         </div>
                     </div>
                     <div class="switch">
-                        <button class="to-left"></button>
-                        <button class="to-right"></button>
+                        <button class="to-left"><i class="fa-solid fa-chevron-left"></i></button>
+                        <button class="to-right"><i class="fa-solid fa-chevron-right"></i></button>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
 
-    <!-- <section class="Choose" id="Choose">
+    <section class="Choose" id="Choose">
+        <div  class="cont">
         <div class="product-1 product">
-            <div>
-                <div class="img">
-                    <img src="image/choose-lamp.png" alt="">
+                <div class="image">
+                    <img class="img1" src="image/choose-lamp.png" alt="">
+                    <h1 class="po1">LIGHT</h1>
+                    <div class="box-shadow"></div>
+                </div>
+            <div class="content">
+                <div>
+                    <h2>Why Choose Us</h2>
+                    <p>Our products have won numerous awards and we can guarantee the unlimited quality of our products.</p>
+                </div>
+                <div class="pro-list">
+                    <ul>
+                        <li><span><i class="fa-solid fa-plus"></i></span>Frequently New Design</li>
+                        <li><span><i class="fa-solid fa-plus"></i></span>Original Production</li>
+                        <li><span><i class="fa-solid fa-plus"></i></span>Production With Large Stock</li>
+                        <li><span><i class="fa-solid fa-plus"></i></span>Professional Quality Control</li>
+                    </ul>
                 </div>
             </div>
-            <div class="content">
-                <h3>Why Choose Us</h3>
-                <p>Our products have won numerous awards and we can guarantee the unlimited quality of our products.</p>
-                <ul>
-                    <li><span><i class="fa-solid fa-plus"></i></span>Frequently New Design</li>
-                    <li><span><i class="fa-solid fa-plus"></i></span>Original Production</li>
-                    <li><span><i class="fa-solid fa-plus"></i></span>Production With Large Stock</li>
-                    <li><span><i class="fa-solid fa-plus"></i></span>Professional Quality Control</li>
-                </ul>
             </div>
-        </div>
         <div class="product-2 product">
             <div>
-                <div class="img">
-                    <img src="image/features-lamp.png" alt="">
+                <div class="image">
+                    <img class="img2" src="image/features-lamp.png" alt="">
+                    <h1 class="po2">LIGHT</h1>
+                    <div class="box-shadow"></div>
                 </div>
             </div>
             <div class="content">
-                <h3>Latest Features</h3>
-                <p>We always provide the latest and best features for your customer, don't worry, we provide the latest technology for you.</p>
-                <ul>
-                    <li>Voltage<br>Settings</li>
-                    <li>Application<br>Control</li>
-                    <li>Voice<br>Control</li>
-                    <li>Schedule<br>Settings</li>
-                </ul>
+                <div>
+                    <h2>Latest Features</h2>
+                    <p>We always provide the latest and best features for your customer, don't worry, we provide the latest technology for you.</p>
+                </div>
+                <div>
+                    <ul>
+                        <li>Voltage<br>Settings</li>
+                        <li>Application<br>Control</li>
+                        <li>Voice<br>Control</li>
+                        <li>Schedule<br>Settings</li>
+                    </ul>
+                </div>
+            </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="Products" id="Products">
         <div class="cont">
