--- a/index.html
+++ b/index.html
@@ -195,101 +195,148 @@
         </div>
     </section>
 
-    <!-- <section class="Products" id="Products">
+    <section class="Products" id="Products">
         <div class="cont">
-            <h2>our product</h2>
-            <p>Discover all our Unique products that are <br> suitable for your home.</p>
+            <div class="title">
+                <h2>our product</h2>
+                <p>Discover all our Unique products that are <br> suitable for your home.</p>
+            </div>
             <div class="content">
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/modern-lamp.png" alt="">
                     </div>
                     <h3 class="name">modern light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>14</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/industrial-lamp.png" alt="">
                     </div>
                     <h3 class="name">Industrial light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>20</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/superbolw-lamp.png" alt="">
                     </div>
                     <h3 class="name">superbolw light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>18</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/ultrawide-lamp.png" alt="">
                     </div>
                     <h3 class="name">ultrawide light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>16</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/roundness-light.png" alt="">
                     </div>
                     <h3 class="name">roundness light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>17</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/stickness-light.png" alt="">
                     </div>
                     <h3 class="name">stickness light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>28</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/superjet-light.png" alt="">
                     </div>
                     <h3 class="name">superjet light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>15</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
                 </div>
-                <div>
-                    <div class="img">
+
+                <div class="item">
+                    <div class="image">
                         <img src="image/nakedness-lamp.png" alt="">
                     </div>
                     <h3 class="name">nakedness light</h3>
                     <p>hanging light</p>
-                    <div class="price"><h3 class="product-price"><span>$</span>14</h3> <span><i class="fa-solid fa-plus"></i></span></div>
+                    <div class="prace">
+                        <h3><span>$</span>10</h3>
+                        <button><i class="fa-solid fa-plus"></i></button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="joinUs">
+        <div class="cont">
+            <div class="join-cont">
+
+                <div class="image">
+                    <img src="image/join-lamp.png" alt="">
+                    <h1>LIGHT</h1>
+                    <div class="box-shadow"></div>
+                </div>
+
+            <div class="contact">
+                <div class="title">
+                    <h2>Get Started</h2>
+                    <p>Do not miss it, join us and get<br>interesting discounts with us.</p>
+                </div>
+                <div class="form">
+                    <input placeholder="Enter your email" type="text">
+                    <button>Join Now</button>
                 </div>
             </div>
-        </div>
-    </section> -->
 
-    <!-- <div class="joinUs">
-        <div>
-            <div class="img">
-                <img src="image/join-lamp.png" alt="">
             </div>
-        </div>
-        <div class="contact">
-            <h3></h3>
-            <p></p>
-            <div class="form">
-                <input type="text">
-                <button>Join Now</button>
-            </div>
-        </div>
-    </div> -->
 
-    <!-- <footer>
+        </div>
+    </section>
+
+    <footer>
+        <div class="cont">
         <div class="footer-contact">
             <div>
-                <h3 class="logo"></h3>
+                <h3 class="logo">SUN<span>LIGHT</span></h3>
                 <p>We have a vision to make lighting evenly distributed to all parts of the earth.</p>
             </div>
+            <div class="footer-links">
             <div>
                 <h3>about</h3>
                 <ul>
@@ -299,36 +346,38 @@
                 </ul>
             </div>
             <div>
-                <h3></h3>
+                <h3>Movement</h3>
                 <ul>
                     <li><a href="#">what sunlight</a></li>
                     <li><a href="#">support us</a></li>
                 </ul>
             </div>
             <div>
-                <h3></h3>
+                <h3>Company</h3>
                 <ul>
                     <li><a href="#">why sunlight</a></li>
                     <li><a href="#">capital</a></li>
                     <li><a href="#">security</a></li>
                 </ul>
             </div>
-            <div class="Follow-icons">
+            <div class="follow-icons">
                 <h3>follow us</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                </div>
                 </div>
             </div>
         </div>
-        <div class="footer-My">
+        <div class="copyRight">
                 <p>© Copyright Hema. All rights reserved</p>
             <div class="terms-and-policy">
-                <p>Terms & Agreements</p>
+                <p>Terms & Agreements</p>   
                 <p>Privacy Policy</p>
             </div>
         </div>
-    </footer>  -->
+        </div>
+    </footer> 
 </body>
 </html>
