--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <div class="mode">
                 <i class="fa-regular fa-moon"></i>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
